# CppPractivedemo

./: CMakeLists.txt  lab2_1.cpp  lab2_10.cpp  lab2_11.cpp  lab2_12.cpp  lab2_13.cpp  lab2_14.cpp  lab2_15.cpp  lab2_16.cpp  lab2_17.cpp  lab2_18.cpp  lab2_19.cpp  lab2_2.cpp  lab2_20.cpp  lab2_21.cpp  lab2_22.cpp  lab2_23.cpp  lab2_24.cpp  lab2_25.cpp  lab2_26.cpp  lab2_27.cpp  lab2_28.cpp  lab2_29.cpp  lab2_3.cpp  lab2_3.h  lab2_30.cpp  lab2_31.cpp  lab2_31.txt  lab2_32.cpp  lab2_33.cpp  lab2_34.cpp  lab2_35.cpp  lab2_36.cpp  lab2_37.cpp  lab2_38.cpp  lab2_39.cpp  lab2_3_main.cpp  lab2_4.cpp  lab2_40.cpp  lab2_41.cpp  (+34 more)
