cmake_minimum_required(VERSION 3.17)
project(CppPractivedemo)

set(CMAKE_CXX_STANDARD 14)

add_executable(CppPractivedemo main.cpp)
add_executable(lab2_1 lab2_1.cpp)
add_executable(lab2_2 lab2_2.cpp)
add_executable(lab2_3 lab2_3_main.cpp lab2_3.cpp)
add_executable(lab2_4 lab2_4.cpp)
add_executable(lab2_5 lab2_5.cpp)
add_executable(lab2_6 lab2_6.cpp)
add_executable(lab2_7 lab2_7.cpp)
add_executable(lab2_8 lab2_8.cpp)
add_executable(lab2_9 lab2_9.cpp)
add_executable(lab2_10 lab2_10.cpp)
add_executable(lab2_11 lab2_11.cpp)
add_executable(lab2_12 lab2_12.cpp)
add_executable(lab2_13 lab2_13.cpp)
add_executable(lab2_14 lab2_14.cpp)
add_executable(lab2_15 lab2_15.cpp)
add_executable(lab2_16 lab2_16.cpp)
add_executable(lab2_17 lab2_17.cpp)
add_executable(lab2_18 lab2_18.cpp)
add_executable(lab2_19 lab2_19.cpp)
add_executable(lab2_20 lab2_20.cpp)
#add_executable(lab2_21 lab2_21.cpp)
add_executable(lab2_22 lab2_22.cpp)
add_executable(lab2_23 lab2_23.cpp)
add_executable(lab2_24 lab2_24.cpp)
add_executable(lab2_25 lab2_25.cpp)
add_executable(lab2_26 lab2_26.cpp)
add_executable(lab2_27 lab2_27.cpp)
add_executable(lab2_28 lab2_28.cpp)
add_executable(lab2_29 lab2_29.cpp)
add_executable(lab2_30 lab2_30.cpp)
add_executable(lab2_31 lab2_31.cpp)
add_executable(lab2_32 lab2_32.cpp)
add_executable(lab2_33 lab2_33.cpp)
add_executable(lab2_34 lab2_34.cpp)
add_executable(lab2_35 lab2_35.cpp)
add_executable(lab2_36 lab2_36.cpp)
add_executable(lab2_37 lab2_37.cpp)
add_executable(lab2_38 lab2_38.cpp)
add_executable(lab2_39 lab2_39.cpp)
add_executable(lab2_40 lab2_40.cpp)
add_executable(lab2_41 lab2_41.cpp)
add_executable(lab2_42 lab2_42.cpp)
#add_executable(lab2_43 lab2_43.cpp)
#add_executable(lab2_44 lab2_44.cpp)
add_executable(lab2_45 lab2_45.cpp)
add_executable(lab2_46 lab2_46.cpp)
add_executable(lab2_47 lab2_47.cpp)
add_executable(lab2_48 lab2_48.cpp)
add_executable(lab2_49 lab2_49.cpp)
add_executable(lab2_50 lab2_50.cpp)
add_executable(lab2_51 lab2_51.cpp)
add_executable(lab2_52 lab2_52.cpp)
add_executable(lab2_53 lab2_53.cpp)
add_executable(lab2_54 lab2_54.cpp)
add_executable(lab2_55 lab2_55.cpp)
add_executable(lab2_56 lab2_56.cpp)
add_executable(lab2_57 lab2_57.cpp)
add_executable(lab2_58 lab2_58.cpp)
add_executable(lab2_59 lab2_59.cpp)
add_executable(lab2_60 lab2_60.cpp)
add_executable(lab2_61 lab2_61.cpp)
add_executable(lab2_62 lab2_62.cpp)
add_executable(lab2_63 lab2_63.cpp)
add_executable(lab2_64 lab2_64.cpp)
add_executable(lab2_65 lab2_65.cpp)
